Uma added style as code and commented it out

--- a/WordToGitHub/src/app/file/file-detail.component.html
+++ b/WordToGitHub/src/app/file/file-detail.component.html
@@ -12,6 +12,7 @@
     </div>-->
 </section>
 <article class="file-detail__actions">
+    <!--<a role="button" class="ms-font-s-plus file-detail__action file-detail__action--link" title="Style current selection as code" (click)="styleAsCode()">Style as code</a>-->
     <a role="button" class="ms-font-s-plus file-detail__action file-detail__action--link" title="Open the file in a webpage on GitHub">View on GitHub</a>
     <button id="buttonPush" class="ms-Button file-detail__action file-detail__action--primary" (click)="push()">Push</button>
     <div class="file-detail__actions--row">
