--- a/WordToGitHub/src/app/components/hamburger/hamburger.component.html
+++ b/WordToGitHub/src/app/components/hamburger/hamburger.component.html
@@ -24,7 +24,7 @@
             <li class="menu-list__item" *ngFor="let repository of favoriteRepositories" (click)="selectRepository(repository)">
                 <p class="ms-font-m">{{repository.name | safenames}}</p>
                 <p class="ms-font-s">@{{repository.owner.login}}</p>
-                <div class="menu-list__item--action"><i class="ms-Icon ms-Icon-large ms-Icon--star" (click)="unpin(repository)"></i></div>
+                <div class="menu-list__item--action" (click)="unpin(repository)"><i class="ms-Icon ms-Icon-large ms-Icon--star"></i></div>
             </li>
         </ul>
     </div>
