--- a/WordToGitHub/src/app/repo/repo.component.html
+++ b/WordToGitHub/src/app/repo/repo.component.html
@@ -13,6 +13,7 @@
 
 <section class="repo-list-component__repos">
     <h2 class="ms-font-xl ms-fontWeight-light">Repositories</h2>
+    
     <ul class="ms-List">
         <li class="repo-list-item ms-ListItem" *ngFor="let repository of repositories">
             <div class="repo-list-item__content" (click)="selectRepo(repository)">
@@ -20,11 +21,13 @@
                 <p class="repo-list-item__secondary-text ms-ListItem-secondaryText ms-font-s-plus">@{{repository.owner.login}}</p>
                 <p class="repo-list-item__tertiary-text ms-ListItem-tertiaryText ms-font-s">{{repository.description}}</p>
             </div>
-            <div class="repo-list-item__actions ms-ListItem-actions">
+            <div class="repo-list-item__actions ms-ListItem-actions" (click)="pin(repository)">
                 <div class="repo-list-item__action ms-ListItem-action">
-                    <i class="ms-Icon ms-Icon-large ms-Icon--starEmpty" (click)="pin(repository)"></i>
+                    <i class="ms-Icon ms-Icon-large ms-Icon--starEmpty"></i>
                 </div>
             </div>
         </li>
     </ul>
+
+    <button class="repo-list-component__load ms-font-m" (click)="load()">Load more</button>
 </section>
