--- a/WordToGitHub/src/app/file/file-detail.component.html
+++ b/WordToGitHub/src/app/file/file-detail.component.html
@@ -13,6 +13,10 @@
 </section>
 <article class="file-detail__actions">
     <!--<a role="button" class="ms-font-s-plus file-detail__action file-detail__action--link" title="Style current selection as code" (click)="styleAsCode()">Style as code</a>-->
+    <div class="file-detail__actions--row">
+        <button id="buttonNumberedList" class="ms-Button file-detail__action file-detail__action--secondary" (click)="insertNumberedList()">Insert numbered list</button>
+        <button id="buttonBulletedList" class="ms-Button file-detail__action file-detail__action--secondary" (click)="insertBulletedList()">Insert bulleted list</button>
+    </div>
     <a role="button" class="ms-font-s-plus file-detail__action file-detail__action--link" title="Open the file in a webpage on GitHub">View on GitHub</a>
     <button id="buttonPush" class="ms-Button file-detail__action file-detail__action--primary" (click)="push()">Push</button>
     <div class="file-detail__actions--row">
