--- a/WordToGitHub/src/components/breadcrumb/breadcrumb.component.scss
+++ b/WordToGitHub/src/components/breadcrumb/breadcrumb.component.scss
@@ -1,5 +1,5 @@
-﻿@import '../../../styles/mixins.scss';
-@import '../../../styles/theme.scss';
+﻿@import '../../styles/mixins.scss';
+@import '../../styles/theme.scss';
 
 .breadcrumb-component {
     @include inline-flex(null, center);
