--- a/WordToGitHub/src/components/hamburger/hamburger.component.scss
+++ b/WordToGitHub/src/components/hamburger/hamburger.component.scss
@@ -1,5 +1,5 @@
-﻿@import '../../../styles/mixins.scss';
-@import '../../../styles/theme.scss';
+﻿@import '../../styles/mixins.scss';
+@import '../../styles/theme.scss';
 
 .hamburger-menu {
     position: fixed;
