--- a/WordToGitHub/src/file/file-tree.component.scss
+++ b/WordToGitHub/src/file/file-tree.component.scss
@@ -1,5 +1,5 @@
-﻿@import '../../styles/mixins.scss';
-@import '../../styles/theme.scss';
+﻿@import '../styles/mixins.scss';
+@import '../styles/theme.scss';
 
 .file-tree-component {
     @include flex();
