--- a/WordToGitHub/src/repo/repo.component.scss
+++ b/WordToGitHub/src/repo/repo.component.scss
@@ -1,5 +1,5 @@
-﻿@import '../styles/mixins.scss';
-@import '../styles/theme.scss';
+﻿@import '../assets/styles/mixins.scss';
+@import '../assets/styles/theme.scss';
 
 .repo-list-component {
     &__search {
