--- a/WordToGitHub/src/login/login.component.scss
+++ b/WordToGitHub/src/login/login.component.scss
@@ -1,6 +1,4 @@
-﻿/* Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license. See full license in root of repo. */
-
-.ms-firstrun-login {
+﻿.ms-firstrun-login {
     position: absolute;
     z-index: 999;
     display: flex;
@@ -17,12 +15,10 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    flex: 1 1 0;
-    height: 100%;
+    flex: 1 1 auto;
 }
-
 
 .ms-firstrun-login__brand h1 {
     letter-spacing: 1px;
@@ -55,11 +51,19 @@
     padding: 0px;
 }
 
+.ms-firstrun-login__centering-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;    
+    flex: 1 1 auto;
+}
+
 .ms-firstrun-login__action {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    height: 450px;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -70,8 +74,6 @@
     flex-wrap: nowrap;
     margin-top: 5px;
 }
-
-
 
 .ms-firstrun-login__button {
     padding-top: 20px;
