--- a/WordToGitHub/src/app/login/login.component.scss
+++ b/WordToGitHub/src/app/login/login.component.scss
@@ -19,16 +19,14 @@
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    flex: 1 1 0;
-    height: 100%;
+    flex: 1 1 60%;        
 }
-
 
 .ms-firstrun-login__brand h1 {
     letter-spacing: 1px;
 }
 
-#ms-firstrun-login__image {
+.ms-firstrun-login__image {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -42,7 +40,7 @@
     background-size: cover;
     width: 90px;
     height: 90px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .ms-firstrun-login__title {
@@ -59,9 +57,9 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    height: 450px;
     padding-left: 20px;
     padding-right: 20px;
+    flex: 1 1 auto;    
 }
 
 .ms-firstrun-login__content--centered {
@@ -70,8 +68,6 @@
     flex-wrap: nowrap;
     margin-top: 5px;
 }
-
-
 
 .ms-firstrun-login__button {
     padding-top: 20px;
@@ -86,7 +82,10 @@
     transition: background ease 0.1s, color ease 0.1s;
 }
 
-#buttonSignInToGitHub:active {
-    color: #33cc33;
-    cursor: pointer;
+.ms-firstrun-login__centering-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
 }
