--- a/WordToGitHub/src/components/notification/message-bar.component.scss
+++ b/WordToGitHub/src/components/notification/message-bar.component.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/mixins.scss';
-@import '../../../styles/theme.scss';
+@import '../../assets/styles/mixins.scss';
+@import '../../assets/styles/theme.scss';
 
 .mw-message-bar {
     width: 100%;
