--- a/WordToGitHub/src/assets/styles/globals.scss
+++ b/WordToGitHub/src/assets/styles/globals.scss
@@ -55,6 +55,10 @@ ul {
     &__main {
         flex: 1 1 0;
         @include flex();
+
+        .async-view {
+            height: 100%;
+        }
     }
 
     &__footer {
@@ -85,7 +89,7 @@ ul {
     }    
 } 
 
-repo, file-list, file-tree, file-create, file-detail, login {
+repo, file-list, file-tree, file-create, file-detail, login, async-view {
     @include flex();
     flex: 1 1 100%;
 }
