--- a/WordToGitHub/src/file/file-tree.component.scss
+++ b/WordToGitHub/src/file/file-tree.component.scss
@@ -4,6 +4,7 @@
 .file-tree-component {
     @include flex();
     @include vScroll();
+    height: 100vh;
 
     &__title {
         padding: $default-spacing;
