--- a/WordToGitHub/src/repo/repo.component.html
+++ b/WordToGitHub/src/repo/repo.component.html
@@ -31,6 +31,6 @@
                 </div>
             </li>
         </ul>
-        <button class="repo-list-component__load ms-font-m" (click)="load()">Load more</button>
+        <button *ngIf="!loadComplete" class="repo-list-component__load ms-font-m" (click)="load()">Load more</button>
     </async-view>
 </section>
