--- a/WordToGitHub/src/components/notification/message-bar.component.scss
+++ b/WordToGitHub/src/components/notification/message-bar.component.scss
@@ -7,6 +7,7 @@
     &__content {
         @include inline-flex();
         width: 100%;
+        align-items: center;
 
         .ms-Icon-large {
             top: 0;
@@ -14,13 +15,9 @@
     }
 
     &__message {
-        flex: 1 1 0px;
-        width: 0px !important; // reset width to depend on the flex-basis instead. why?
         @include ellipsis();
-
-        a {
-            font-size: 9pt;
-        }        
+        flex: 1 1 auto;     
+        width: calc(100vw - 70px);               
     }
 
     &__icon {
