updating create process and adding basic templates

--- a/WordToGitHub/src/login/login.component.html
+++ b/WordToGitHub/src/login/login.component.html
@@ -11,10 +11,8 @@
             <div class="ms-firstrun-login__action">
                 <div class="ms-firstrun-login__button">
                     <button id="buttonSignInToGitHub" class="ms-Button  ms-fontColor-white" (click)="login()">
-                            <span class="ms-Button-label">
-                                Sign in with GitHub
-                            </span>
-                        </button>
+                        <span class="ms-Button-label">Sign in with GitHub</span>
+                    </button>
                 </div>
                 <div class="ms-firstrun-login__content--centered ms-font-s ms-fontColor-white">
                     <p>Sign in with GitHub to browse your repositories.</p>
