--- a/WordToGitHub/src/repo/repo.component.html
+++ b/WordToGitHub/src/repo/repo.component.html
@@ -1,13 +1,6 @@
-﻿<!--<div class="repo-list-component__search ms-SearchBox">
-    <input class="repo-list-search__input ms-SearchBox-field ms-font-s-plus" type="search" [(ngModel)]="query">
-    <label class="repo-list-search__label ms-SearchBox-label ms-font-s-plus" [hidden]="query"><i class="ms-SearchBox-icon ms-Icon ms-Icon--search"></i>Search for repositories by name or url.</label>
-</div>-->
-
-<section class="repo-list-component__header">
+﻿<section class="repo-list-component__header">
     <ul class="repo-list-command-bar">
         <li class="repo-list-command-bar__command repo-list-command-bar__command--hamburger-menu" (click)="showMenu()"><i class="ms-Icon ms-Icon--menu ms-fontColor-themePrimary"></i></li>
-        <!--<li class="repo-list-command-bar__command"><i class="ms-Icon ms-Icon--search ms-fontColor-themePrimary"></i></li>
-        <li class="repo-list-command-bar__command"><i class="ms-Icon ms-Icon--refresh ms-fontColor-themePrimary"></i></li>-->
     </ul>
 </section>
 
