Fixed the bulleted and numbered lists mismatch bug

--- a/WordToGitHub/src/file/file-detail.component.html
+++ b/WordToGitHub/src/file/file-detail.component.html
@@ -14,8 +14,8 @@
 <article class="file-detail__actions">
     <!--<a role="button" class="ms-font-s-plus file-detail__action file-detail__action--link" title="Style current selection as code" (click)="styleAsCode()">Style as code</a>-->
     <div class="file-detail__actions--row">
-        <button class="ms-Button file-detail__action file-detail__action--secondary file-detail__action--split" (click)="insertNumberedList()">Add bullets</button>
-        <button class="ms-Button file-detail__action file-detail__action--secondary file-detail__action--split" (click)="insertBulletedList()">Add numbering</button>
+        <button class="ms-Button file-detail__action file-detail__action--secondary file-detail__action--split" (click)="insertBulletedList()">Add bullets</button>
+        <button class="ms-Button file-detail__action file-detail__action--secondary file-detail__action--split" (click)="insertNumberedList()">Add numbering</button>
     </div>
     <a [href]="viewLink" target="_blank" role="button" class="ms-font-s-plus file-detail__action file-detail__action--link" title="Open the file in a webpage on GitHub">View on GitHub</a>
     <div class="file-detail__actions--row">
