--- a/MarkdownEditorForWord/src/app/file/tree/file-tree.component.scss
+++ b/MarkdownEditorForWord/src/app/file/tree/file-tree.component.scss
@@ -1,5 +1,5 @@
-﻿@import '../assets/styles/mixins.scss';
-@import '../assets/styles/theme.scss';
+﻿@import '../../../assets/styles/mixins.scss';
+@import '../../../assets/styles/theme.scss';
 
 .file-tree-component {
     @include flex();
@@ -48,7 +48,7 @@
             top: 2px;
         }
     }
-    
+
     &--separator {
         padding: 0;
         border-bottom: 1px solid $background-light;
