--- a/MarkdownEditorForWord/src/app/login/login.component.scss
+++ b/MarkdownEditorForWord/src/app/login/login.component.scss
@@ -95,4 +95,8 @@
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
+
+    .ms-progress-component__title {
+        margin-bottom: 35px;
+    }
 }
