--- a/MarkdownEditorForWord/src/app/login/login.component.html
+++ b/MarkdownEditorForWord/src/app/login/login.component.html
@@ -1,23 +1,31 @@
 ﻿<main class="ms-firstrun-login__page">
-    <div class="ms-firstrun-login">
-        <div class="ms-firstrun-login__brand">
-            <div id="word-github-logo"></div>
-            <div>
-                <h1 class="ms-firstrun-login__title ms-font-xl ms-fontColor-white ms-fontWeight-semibold">MARKDOWN EDITOR</h1>
-                <h2 class="ms-firstrun-login__title ms-font-l ms-fontColor-white ms-fontWeight-light">for Word</h2>
-            </div>
-        </div>
-        <div class="ms-firstrun-login__centering-container">
-            <div class="ms-firstrun-login__action">
-                <div class="ms-firstrun-login__button">
-                    <button id="buttonSignInToGitHub" class="ms-Button  ms-fontColor-white" (click)="login()">
+	<div class="ms-firstrun-login">
+		<div class="ms-firstrun-login__brand">
+			<div id="word-github-logo"></div>
+			<div>
+				<h1 class="ms-firstrun-login__title ms-font-xl ms-fontColor-white ms-fontWeight-semibold">MARKDOWN EDITOR</h1>
+				<h2 class="ms-firstrun-login__title ms-font-l ms-fontColor-white ms-fontWeight-light">for Word</h2>
+			</div>
+		</div>
+
+		<div class="ms-firstrun-login__centering-container">
+			<div class="ms-firstrun-login__action" [hidden]="loading">
+				<div class="ms-firstrun-login__button">
+					<button id="buttonSignInToGitHub" class="ms-Button  ms-fontColor-white" (click)="login()">
                         <span class="ms-Button-label">Sign in with GitHub</span>
                     </button>
-                </div>
-                <div class="ms-firstrun-login__content--centered ms-font-s ms-fontColor-white">
-                    <p>Sign in with GitHub to browse your repositories.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+				</div>
+				<div class="ms-firstrun-login__content--centered ms-font-s ms-fontColor-white">
+					<p>Sign in with GitHub to browse your repositories.</p>
+				</div>
+			</div>
+
+			<main class="ms-progress-component__main" [hidden]="!loading">
+				<h2 class="ms-progress-component__title ms-font-m ms-fontColor-white ms-fontWeight-semilight">{{loading}}</h2>
+				<div class="ms-progress" [hidden]="!progress">
+					<div class="ms-Spinner large"></div>
+				</div>
+			</main>
+		</div>
+	</div>
 </main>
